syntax = "proto3";
package bnbchain.bfs.payment;

import "gogoproto/gogo.proto";
import "bfs/payment/params.proto";
import "bfs/payment/stream_record.proto";
import "bfs/payment/payment_account_count.proto";
import "bfs/payment/payment_account.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/bnb-chain/bfs/x/payment/types";

// GenesisState defines the payment module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  repeated StreamRecord streamRecordList = 2 [(gogoproto.nullable) = false];
  repeated PaymentAccountCount paymentAccountCountList = 3 [(gogoproto.nullable) = false];
  repeated PaymentAccount paymentAccountList = 4 [(gogoproto.nullable) = false];
  // this line is used by starport scaffolding # genesis/proto/state
}
